@@ -35,3 +35,24 @@ mq_send
 mq_timedsend
 mq_receive
 mq_timedreceive
+open
+socket
+close
+ioctl
+read
+write
+recvmsg
+sendmsg
+recvfrom
+sendto
+recv
+send
+getsockopt
+setsockopt
+bind
+connect
+listen
+accept
+getsockname
+getpeername
+shutdown
