@@ -1,5 +1,7 @@
 2005-08-10  Philippe Gerum  <rpm@xenomai.org>
 
+	* skins/rtdm: Merge RTDM patch level #7.
+
 	* nucleus/timer.c: Refactor using function tables for periodic and
 	aperiodic modes. Aperiodic mode is now the built-in one, and
 	periodic has become optional, which is more consistent wrt the hw
